--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Install Prezto
-  git: repo=https://github.com/sorin-ionescu/prezto.git dest=~/.zprezto force=yes
+- name: Install OMZ
+  git: repo=https://github.com/robbyrussell/oh-my-zsh.git dest=~/.oh-my-zsh force=yes
 
 - name: Symlink my dotfiles
   file: src=~/dotfiles/home/{{ item }}
@@ -10,7 +10,6 @@
   with_items:
     - .vimrc
     - .zshrc
-    - .zpreztorc
     - .zlogin
     - .zlogout
     - .zshenv
@@ -30,5 +29,22 @@
 - name: Install/update tmux plugins
   command: ~/.tmux/plugins/tpm/bin/update_plugins all
 
-- name: Install/update VIM plugins
-  command: vim +PluginInstall! +qall
+
+- name: Install Alacritty with cargo
+  shell: |
+    set -o pipefail
+    cargo install --list | \
+    awk 'BEGIN{ code=1 } {if ($1 == "{{ item }}"){ code=0 }} END{ exit code }' || \
+    cargo install {{ item }}
+  with_items: "alacritty"
+  register: crate_install_result
+  changed_when: "'Installed package' in crate_install_result.stderr"
+  args:
+    executable: /bin/bash
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}/bin"
+    TMPDIR: '{{ temp_install_dir.path }}'
+    RUSTUP_HOME: "{{ rustup_user_home }}/{{ rustup_home_suffix }}"
+    CARGO_HOME: "{{ rustup_user_home }}/{{ rustup_cargo_home_suffix }}"
+  when:
+    - rustup_cargo_crates is defined
